@@ -1,4 +1,6 @@
 2008/05/20
+
+	36. Added diffusion shooter factory.
 	35. Added diffusion node picker factory.
 	
 	
